# rrummmikub

./: default.nix  rummikub.cabal  shell.nix
app/: Common.hs  Main.hs
src/: RRummikub.hs
